--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
       - run:
           name: Set Java 17
           command: |
+            # Tambahkan kunci GPG untuk repositori Google Cloud SDK
+            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+            
+            # Update dan install Java 17
             sudo apt-get update
             sudo apt-get install -y openjdk-17-jdk
             export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
