--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,33 +1,19 @@
 version: 2.1
- 
-orbs:
-  android: circleci/android@0.2.1
- 
+
 jobs:
   build:
-    executor: android/android
+    docker:
+      - image: cimg/android:2023.08-java17
     steps:
       - checkout
       - restore_cache:
           key: android-orb-v1-
       - run:
           name: Chmod permissions
-          command: sudo chmod +x ./gradlew
+          command: chmod +x ./gradlew
       - run:
           name: Check Java version
           command: java -version
-      - run:
-          name: Set Java 17
-          command: |
-            # Tambahkan kunci GPG untuk repositori Google Cloud SDK
-            curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-            
-            # Update dan install Java 17
-            sudo apt-get update
-            sudo apt-get install -y openjdk-17-jdk
-            export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
-            export PATH=$JAVA_HOME/bin:$PATH
-            java -version
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
