--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,31 @@
 version: 2.1
  
 orbs:
-  android: circleci/android@2.3.0
+  android: circleci/android@0.2.1
  
 jobs:
   build:
-    executor:
-      name: android/android-machine
-      resource-class: large
-      tag: 2023.07.1
+    executor: android/android
     steps:
       - checkout
-      - android/setup-java:
-          java-version: 17
       - restore_cache:
           key: android-orb-v1-
       - run:
           name: Chmod permissions
-          command: chmod +x ./gradlew
+          command: sudo chmod +x ./gradlew
+      - run:
+          name: Check Java version
+          command: java -version
+      - run:
+          name: Set Java 17
+          command: |
+            # Tambahkan PPA untuk Java
+            sudo add-apt-repository -y ppa:openjdk-r/ppa
+            sudo apt-get update
+            sudo apt-get install -y openjdk-17-jdk
+            export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+            export PATH=$JAVA_HOME/bin:$PATH
+            java -version
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
