--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,22 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/android:2023.08-java17
+      - image: cimg/android:2023.08
     steps:
       - checkout
+      - run:
+          name: Install Java 17
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y openjdk-17-jdk
+            export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+            export PATH=$JAVA_HOME/bin:$PATH
+            java -version
       - restore_cache:
           key: android-orb-v1-
       - run:
           name: Chmod permissions
           command: chmod +x ./gradlew
-      - run:
-          name: Check Java version
-          command: java -version
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
